   - Feature: Gnubiff can now be started without GUI (option '--nogui')
   - Feature: Gnubiff can now be started without X (this was feature request
        #1059347 by Iulian Tocu)
   - Feature: Hungarian translation (thanks to Wallner Adam; for version 2.1.x)
   - Added Wallner Adam to translators and contributors
   - Bugfix: Added an include to src/support.cc (for FreeBSD 4)
 * Roland Stigge
   - Added reference to info pages in man page (Debian bug #335193)

Version 2.1.8
 * Robert Sowada
   - Changed version to 2.1.8
   - Backport (from gnubiff 2.2.0 CVS) of smaller fixes
   - Backport (from gnubiff 2.2.0 CVS) of newer version in config file fix
   - Updated Italian translation (thanks to Stefano Fabri)
   - Feature: Hungarian translation (thanks to Wallner Adam)
   - Added Wallner Adam to translators and contributors
   - Updated TODO
   - Bugfix: Added an include to src/support.cc (for FreeBSD 4)

Version 2.1.7		2005-10-31  0:43
 * Robert Sowada
   - Changed version to 2.1.7
   - Bugfix: Mistake when backporting from 2.2.0 to 2.1.6. Thanks to Maik
        Wachsmuth and Satou Kazuhito for reporting this bug.
   - Added Maik Wachsmuth and Satou Kazuhito to contributors
 * Roland Stigge
   - Added reference to info page in man page (Debian bug #335193)
    
Version 2.1.6		2005-10-09 15:51
 * Robert Sowada
   - Changed version to 2.1.6
   - Backport (from gnubiff 2.2.0 CVS) of changes for installing gnubiff into
        an arbitrary location

Version 2.1.5		2005-08-21 18:11
 * Robert Sowada
   - Changed version to 2.1.5
   - Bugfix: Checking if a FAM connection is established
   - Bugfix: Threadsafeness of FAM code
   - Bugfix: Retrying monitoring via FAM
   - Copyright message in Credits dialog updated
   - Bugfix: Finally fixed the FAM problem (bug #1221040; thanks to Hubert
        Verstraete for providing a patch)
   - Updated TODO
   - Added Hubert Verstraete to contributors
   - Bugfix: Obtaining keyboard focus automatically (thanks to Wade Berrier